# mlinpl-tutorials-public

0-setup/: README.md
1-metallium-introduction/: metallium_introduction.ipynb
1-metallium-introduction/tt_metal/programming_examples/eltwise_binary_hypot/: CMakeLists.txt  eltwise_binary.cpp
1-metallium-introduction/tt_metal/programming_examples/eltwise_binary_hypot/kernels/compute/: tiles_hypot.cpp
2-ttnn-intro/: ttnn_intro.ipynb
3-simple-models/: mlp_mnist_weights.pt  mlp_sin.pt  ttnn_mlp_tutorial.ipynb
4-clip-zero-shot-image-classificaton/: ttnn_clip_zero_shot_classification.ipynb
6-advanced-models/: running_models.ipynb
